--- a/client/public/cycle.css
+++ b/client/public/cycle.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 /* variables declaration */
@@ -11,65 +12,59 @@
   --text_secondary_color: #d8d8d8;
 }
 html {
-  font-size: 62.5%;
+  font-size: 95%;
 }
-a{
+a {
   color: #d8d8d8 !important;
 }
-a:hover{
+a:hover {
   text-decoration: none !important;
 }
 /* ================ basic ========== */
-body{
+body {
   background-color: #fff;
   overflow-x: hidden;
 }
-.text-center{
+.text-center {
   display: flex;
   justify-content: center;
 }
-.t-orange{
+.t-orange {
   color: var(--secondary_color) !important;
 }
-p{
-  font-family: "PT Serif", Sans-serif;
+p {
   font-weight: 400;
-  font-size: 1.3rem !important; 
+  font-size: 1.3rem !important;
   line-height: 1.625em;
   letter-spacing: 1px;
   color: #41444b;
   overflow-x: hidden;
-  text-align: justify;  
+  text-align: justify;
 }
-h1{
-font-family: 'Libre Baskerville', "Times New Roman", serif;;
-font-weight: 500;
-font-size: 5.2rem;
+h1 {
+  font-weight: 500;
+  font-size: 5.2rem;
   color: #191a20;
   line-height: 60px;
 }
 h2 {
-  font-family: 'Libre Baskerville', "Times New Roman", serif;
   font-weight: 500 !important;
   font-size: 3.4rem !important;
   line-height: 46px;
   color: #191a20;
 }
-h3{
-  font-family:'Libre Baskerville', "Times New Roman", serif;
+h3 {
   font-weight: 500 !important;
   font-size: 2.8rem;
   color: #191a20;
 }
 h4 {
-  font-family: "PT Serif", Sans-serif;
   font-weight: 500 !important;
   font-size: 2.6rem;
   color: #191a20;
   line-height: 46px;
 }
 h5 {
-  font-family:"PT Serif", Sans-serif;
   font-size: 2.2rem;
   line-height: 24px;
   letter-spacing: 0.05em;
@@ -79,7 +74,6 @@ h5 {
   color: #191a20;
 }
 h6 {
-  font-family: "PT Serif", Sans-serif;
   font-size: 2rem;
   line-height: 24px;
   letter-spacing: 0.05em;
@@ -91,248 +85,243 @@ h6 {
   padding: 5rem;
 }
 
-.p-lr-50{
-   padding-left: 5rem;
-   padding-right: 5rem;
+.p-lr-50 {
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
-.t-white{
+.t-white {
   color: #fff !important;
 }
-.style_ul{
+.style_ul {
   list-style: disc !important;
 }
-.w-300{
+.w-300 {
   width: 30rem;
 }
 /* ======  title underline========== */
 .title-underline {
-	padding-bottom: 3px;
-	display: inline-block;
-	vertical-align: middle;
-	-webkit-transform: translateZ(0);
-	transform: translateZ(0);
-	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
-	-moz-osx-font-smoothing: grayscale;
-	position: relative;
-	overflow: hidden;
+  padding-bottom: 3px;
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  position: relative;
+  overflow: hidden;
 }
 .title-underline:before {
-	content: "";
-	position: absolute;
-	left: 50%;
-	right: 50%;
-	bottom: 0;
-	background: var(--secondary_color);
-	height: 3px;
-	-webkit-transition-property: left, right;
-	transition-property: left, right;
-	-webkit-transition-duration: 0.3s;
-	transition-duration: 0.3s;
-	-webkit-transition-timing-function: ease-out;
-	transition-timing-function: ease-out;
+  content: "";
+  position: absolute;
+  left: 50%;
+  right: 50%;
+  bottom: 0;
+  background: var(--secondary_color);
+  height: 3px;
+  -webkit-transition-property: left, right;
+  transition-property: left, right;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
 }
 .title-underline:after {
-	content: "";
-	position: absolute;
-	align-items: center;
-	justify-content: center;
-	left: 50%;
-	right: 50%;
-	bottom: 0;
-	background: var(--secondary_color);
-	height: 3px;
-	margin-left: -15px;
-	width: 30px;
-	border-radius: 50%;
+  content: "";
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  left: 50%;
+  right: 50%;
+  bottom: 0;
+  background: var(--secondary_color);
+  height: 3px;
+  margin-left: -15px;
+  width: 30px;
+  border-radius: 50%;
 }
 .title-underline:hover:before {
-	left: 0%;
-	right: 0%;
+  left: 0%;
+  right: 0%;
 }
 /* ================  navbar css ======== */
-nav{
-    height: 6rem;
-    width: 100vw;
-    background-color: var(--primary_color);
-    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
-    display: flex;
-    z-index: 10;
+nav {
+  height: 6rem;
+  width: 100vw;
+  background-color: var(--primary_color);
+  box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
+  display: flex;
+  z-index: 10;
 }
-
 
 /*Styling Links*/
-.nav-links{
-    display: flex;
-    list-style: none; 
-    width: 100vw;
-    padding: 0 0.7vw;
-    justify-content: space-between;
-    align-items: center;
-    text-transform: uppercase;
+.nav-links {
+  display: flex;
+  list-style: none;
+  width: 100vw;
+  padding: 0 0.7vw;
+  justify-content: space-between;
+  align-items: center;
+  text-transform: uppercase;
 }
-.nav-links li a{
-    text-decoration: none;
-    
+.nav-links li a {
+  text-decoration: none;
 }
-.main_link a:hover{
+.main_link a:hover {
   color: var(--secondary_color) !important;
 }
 .nav-links li {
-    position: relative;
+  position: relative;
 }
 .nav-links li a::before {
-    content: "";
-    display: block;
-    height: 3px;
-    width: 0%;
-    position: absolute;
-    transition: all ease-in-out 250ms;
-    margin: 0 0 0 10%;
+  content: "";
+  display: block;
+  height: 3px;
+  width: 0%;
+  position: absolute;
+  transition: all ease-in-out 250ms;
+  margin: 0 0 0 10%;
 }
-
 
 /*Styling Buttons*/
-.login-button{
-    background-color: transparent;
-    border: 1.5px solid #f2f5f7;
-    border-radius: 2em;
-    padding: 0.6rem 0.8rem;
-    margin-left: 2vw;
-    font-size: 1rem;
-    cursor: pointer;
-
+.login-button {
+  background-color: transparent;
+  border: 1.5px solid #f2f5f7;
+  border-radius: 2em;
+  padding: 0.6rem 0.8rem;
+  margin-left: 2vw;
+  font-size: 1rem;
+  cursor: pointer;
 }
 .login-button:hover {
-    color: #131418;
-    background-color: #f2f5f7;
-    border:1.5px solid #f2f5f7;
-    transition: all ease-in-out 350ms;
+  color: #131418;
+  background-color: #f2f5f7;
+  border: 1.5px solid #f2f5f7;
+  transition: all ease-in-out 350ms;
 }
-.join-button{
-    color: #131418;
-    background-color: #61DAFB;
-    border: 1.5px solid #61DAFB;
-    border-radius: 2em;
-    padding: 0.6rem 0.8rem;
-    font-size: 1rem;
-    cursor: pointer;
+.join-button {
+  color: #131418;
+  background-color: #61dafb;
+  border: 1.5px solid #61dafb;
+  border-radius: 2em;
+  padding: 0.6rem 0.8rem;
+  font-size: 1rem;
+  cursor: pointer;
 }
 .join-button:hover {
-    color: #f2f5f7;
-    background-color: transparent;
-    border:1.5px solid #f2f5f7;
-    transition: all ease-in-out 350ms;
+  color: #f2f5f7;
+  background-color: transparent;
+  border: 1.5px solid #f2f5f7;
+  transition: all ease-in-out 350ms;
 }
 
 /*Styling Hamburger Icon*/
-.hamburger div{
-    width: 30px;
-    height:3px;
-    background: #f2f5f7;
-    margin: 5px;
-    transition: all 0.3s ease;
+.hamburger div {
+  width: 30px;
+  height: 3px;
+  background: #f2f5f7;
+  margin: 5px;
+  transition: all 0.3s ease;
 }
-.hamburger{
-    display: none;
+.hamburger {
+  display: none;
 }
 
 /*Stying for small screens*/
-@media screen and (max-width: 800px){
-    nav{
-        /* position: fixed; */
-        z-index: 3;
-    }
-    .mobileview{
-      flex-direction: column;
-    }
-    .mobileview li{
-      margin-top: 2rem !important;
-    }
-    .hamburger{
-        display:block;
-        position: absolute;
-        cursor: pointer;
-        right: 10%;
-        top: 2%;
-       
-        z-index: 9;
-        transition: all 0.7s ease;
-    }
-    .nav-links{
-        position: fixed;
-        background: var(--primary_color);
-        height: 100vh;
-        width: 100%;
-        flex-direction: column;
-        clip-path: circle(50px at 90% -20%);
-        -webkit-clip-path: circle(50px at 90% -10%);
-        transition: all 1s ease-out;
-        pointer-events: none;
-    }
-    .nav-links.open{
-        clip-path: circle(1000px at 90% -10%);
-        -webkit-clip-path: circle(1000px at 90% -10%);
-        pointer-events: all;
-        z-index: 8;
-    }
-    .nav-links li{
-        opacity: 0;
-    }
+@media screen and (max-width: 800px) {
+  nav {
+    /* position: fixed; */
+    z-index: 3;
+  }
+  .mobileview {
+    flex-direction: column;
+  }
+  .mobileview li {
+    margin-top: 2rem !important;
+  }
+  .hamburger {
+    display: block;
+    position: absolute;
+    cursor: pointer;
+    right: 10%;
+    top: 4%;
 
-    .nav-links li:nth-child(1){
-        transition: all 0.5s ease 0.2s;
-        color: var(--secondary_color) !important;
-    }
-    .nav-links li:nth-child(2){
-        transition: all 0.5s ease 0.4s;
-    }
-    .nav-links li:nth-child(3){
-        transition: all 0.5s ease 0.6s;
-    }
-    .nav-links li:nth-child(4){
-        transition: all 0.5s ease 0.7s;
-    }
-    .nav-links li:nth-child(5){
-        transition: all 0.5s ease 0.8s;
-    }
-    .nav-links li:nth-child(6){
-        transition: all 0.5s ease 0.9s;
-        margin: 0;
-    }
-    .nav-links li:nth-child(7){
-        transition: all 0.5s ease 1s;
-        margin: 0;
-    }
-    li.fade{
-        opacity: 1 !important;
-    }
-    .mobile_view_text{
-      display: block !important;
-    }
-  
-    
+    z-index: 9;
+    transition: all 0.7s ease;
+  }
+  .nav-links {
+    position: fixed;
+    background: var(--primary_color);
+    height: 100vh;
+    width: 100%;
+    flex-direction: column;
+    clip-path: circle(50px at 90% -20%);
+    -webkit-clip-path: circle(50px at 90% -10%);
+    transition: all 1s ease-out;
+    pointer-events: none;
+  }
+  .nav-links.open {
+    clip-path: circle(1000px at 90% -10%);
+    -webkit-clip-path: circle(1000px at 90% -10%);
+    pointer-events: all;
+    z-index: 8;
+  }
+  .nav-links li {
+    opacity: 0;
+  }
+
+  .nav-links li:nth-child(1) {
+    transition: all 0.5s ease 0.2s;
+    color: var(--secondary_color) !important;
+  }
+  .nav-links li:nth-child(2) {
+    transition: all 0.5s ease 0.4s;
+  }
+  .nav-links li:nth-child(3) {
+    transition: all 0.5s ease 0.6s;
+  }
+  .nav-links li:nth-child(4) {
+    transition: all 0.5s ease 0.7s;
+  }
+  .nav-links li:nth-child(5) {
+    transition: all 0.5s ease 0.8s;
+  }
+  .nav-links li:nth-child(6) {
+    transition: all 0.5s ease 0.9s;
+    margin: 0;
+  }
+  .nav-links li:nth-child(7) {
+    transition: all 0.5s ease 1s;
+    margin: 0;
+  }
+  li.fade {
+    opacity: 1 !important;
+  }
+  .mobile_view_text {
+    display: block !important;
+  }
 }
 
-.mobile_view_text{
+.mobile_view_text {
   display: none;
 }
 /*Animating Hamburger Icon on Click*/
-.toggle .line1{
-    transform: rotate(-45deg) translate(-5px,6px);
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
 }
-.toggle .line2{
-    transition: all 0.7s ease;
-    width:0;
+.toggle .line2 {
+  transition: all 0.7s ease;
+  width: 0;
 }
-.toggle .line3{
-    transform: rotate(45deg) translate(-5px,-6px);
+.toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
 }
-.nav_logo{
-  width: 10rem;
+.nav_logo {
+  width: 70px;
+  text-align: center;
 }
-.main_link{
+.main_link {
   position: relative;
   font-size: 2rem !important;
 }
@@ -340,174 +329,222 @@ nav{
 /* =================navbar end========= */
 /* =========== button css ========== */
 
-	.btn {
-		-webkit-transition: background-color 0.2s;
-		-o-transition: background-color 0.2s;
-		transition: background-color 0.2s;
-	}
+.btn {
+  -webkit-transition: background-color 0.2s;
+  -o-transition: background-color 0.2s;
+  transition: background-color 0.2s;
+}
 
-	.cycle-btn {
-		color: #ffa800 !important;
-		position: relative;
-		display: block;
-		overflow: hidden;
-		width: 100%;
-		max-width: 250px;
-		padding: 14px 0;
-		text-transform: uppercase;
-		z-index: 5;
-		text-align: center;
-		font-size: 1.5rem !important;
-		font-weight: bold;
-		border: 3px solid #ffa800 !important;
-		border-radius: 2px;
-		background-color: #fff;
-		box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
-		transition: color 0.7s;
-	  }
-	  
-	  
-	  .cycle-btn:before,.cycle-btn:after {
-		content: '';
-		position: absolute;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-		z-index: -1;
-		box-sizing: border-box;
-		-webkit-transition: 0.5s ease-in-out;
-		transition: 0.5s ease-in-out;
-	  }
-	  
-	  .cycle-btn:before {
-		 right: -50px;
-		border-right: 50px solid transparent;
-		border-bottom: 80px solid #ffa800;
-		-webkit-transform: translateX(-100%);
-		 transform: translateX(-100%);
-	  }
-	  .cycle-btn:after {
-		left: -50px;
-		border-left: 50px solid transparent;
-		border-top: 80px solid #ffa800;
-		-webkit-transform: translateX(100%);
-				transform: translateX(100%);
-		  -webkit-transition: 0.5s ease-in-out;
-		transition: 0.5s ease-in-out;
-	  }
-	  
-	  .cycle-btn:hover {
-	   color: #fff !important;
-	   font-weight: bold;
-	   font-size: 1.5rem;
-	  }
-	  .cycle-btn:hover:before {
-		-webkit-transform: translateX(-33%);
-				transform: translateX(-33%);
-				 -webkit-transition: 0.5s ease-in-out;
-		transition: 0.5s ease-in-out;
-	  }
-	  .cycle-btn:hover:after {
-		-webkit-transform: translateX(33%);
-				transform: translateX(33%);
-				 -webkit-transition: 0.5s ease-in-out;
-		transition: 0.5s ease-in-out;
-	  }
+.cycle-btn {
+  color: #ffa800 !important;
+  position: relative;
+  display: block;
+  overflow: hidden;
+  width: 100%;
+  max-width: 250px;
+  padding: 14px 0;
+  text-transform: uppercase;
+  z-index: 5;
+  text-align: center;
+  font-size: 1.5rem !important;
+  font-weight: bold;
+  border: 3px solid #ffa800 !important;
+  border-radius: 2px;
+  background-color: #fff;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
+  transition: color 0.7s;
+}
+
+.cycle-btn:before,
+.cycle-btn:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  box-sizing: border-box;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+}
+
+.cycle-btn:before {
+  right: -50px;
+  border-right: 50px solid transparent;
+  border-bottom: 80px solid #ffa800;
+  -webkit-transform: translateX(-100%);
+  transform: translateX(-100%);
+}
+.cycle-btn:after {
+  left: -50px;
+  border-left: 50px solid transparent;
+  border-top: 80px solid #ffa800;
+  -webkit-transform: translateX(100%);
+  transform: translateX(100%);
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+}
+
+.cycle-btn:hover {
+  color: #fff !important;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+.cycle-btn:hover:before {
+  -webkit-transform: translateX(-33%);
+  transform: translateX(-33%);
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+}
+.cycle-btn:hover:after {
+  -webkit-transform: translateX(33%);
+  transform: translateX(33%);
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+}
 /* ======== maps ======== */
 .google-maps {
-    position: relative;
-    padding-bottom: 75%; 
-    height: 0;
-    overflow: hidden;
+  position: relative;
+  padding-bottom: 75%;
+  height: 0;
+  overflow: hidden;
 }
 .google-maps iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100% !important;
-    height: 50% !important;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 50% !important;
 }
 /* card */
-.card-front,.card-back{
+.card-front,
+.card-back {
   width: 100%;
   height: 100%;
   overflow: hidden;
   backface-visibility: hidden;
-  transition: all .4s linear;
+  transition: all 0.4s linear;
 }
-.card-front{
-
+.card-front {
   transform: perspective(600px) rotateY(0deg);
 }
-.card-back{
+.card-back {
   position: absolute;
   background-color: #fff;
   transform: perspective(600px) rotateY(180deg);
 }
-.homepage_card{
+.homepage_card {
   cursor: pointer;
-
 }
-.homepage_card:hover > .card-front{
+.homepage_card:hover > .card-front {
   transform: perspective(600px) rotateY(-180deg);
 }
-.homepage_card:hover > .card-back{
+.homepage_card:hover > .card-back {
   transform: perspective(600px) rotateY(0deg);
 }
 /* ============= input ============== */
 .ui-datepicker .ui-datepicker-header {
   position: relative;
-  padding: .2em 0;
+  padding: 0.2em 0;
 }
 
-.ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br {
+.ui-corner-all,
+.ui-corner-bottom,
+.ui-corner-right,
+.ui-corner-br {
   border-bottom-right-radius: 4px;
 }
-.ui-corner-all, .ui-corner-bottom, .ui-corner-left, .ui-corner-bl {
+.ui-corner-all,
+.ui-corner-bottom,
+.ui-corner-left,
+.ui-corner-bl {
   border-bottom-left-radius: 4px;
 }
-.ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr {
+.ui-corner-all,
+.ui-corner-top,
+.ui-corner-right,
+.ui-corner-tr {
   border-top-right-radius: 4px;
 }
-.ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl {
+.ui-corner-all,
+.ui-corner-top,
+.ui-corner-left,
+.ui-corner-tl {
   border-top-left-radius: 4px;
 }
 .ui-widget-header {
   border: 1px solid #aaa;
-  background: #ccc url(images/ui-bg_highlight-soft_75_cccccc_1x100.png) 50% 50% repeat-x;
+  background: #ccc url(images/ui-bg_highlight-soft_75_cccccc_1x100.png) 50% 50%
+    repeat-x;
   color: #222;
   font-weight: bold;
 }
 .ui-helper-clearfix {
   min-height: 0;
 }
-.ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br {
-    border-bottom-right-radius: 4px;
+.ui-corner-all,
+.ui-corner-bottom,
+.ui-corner-right,
+.ui-corner-br {
+  border-bottom-right-radius: 4px;
 }
-.ui-corner-all, .ui-corner-bottom, .ui-corner-left, .ui-corner-bl {
-    border-bottom-left-radius: 4px;
+.ui-corner-all,
+.ui-corner-bottom,
+.ui-corner-left,
+.ui-corner-bl {
+  border-bottom-left-radius: 4px;
 }
-.ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr {
-    border-top-right-radius: 4px;
+.ui-corner-all,
+.ui-corner-top,
+.ui-corner-right,
+.ui-corner-tr {
+  border-top-right-radius: 4px;
 }
-.ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl {
-    border-top-left-radius: 4px;
+.ui-corner-all,
+.ui-corner-top,
+.ui-corner-left,
+.ui-corner-tl {
+  border-top-left-radius: 4px;
 }
 .ui-widget-content {
-    border: 1px solid #aaa;
-    background: #fff url(images/ui-bg_flat_75_ffffff_40x100.png) 50% 50% repeat-x;
-    color: #222;
+  border: 1px solid #aaa;
+  background: #fff url(images/ui-bg_flat_75_ffffff_40x100.png) 50% 50% repeat-x;
+  color: #222;
 }
 .ui-widget {
-    font-family: Verdana,Arial,sans-serif;
-    font-size: 1.1em;
+  font-size: 1.1em;
 }
 .ui-datepicker {
-    width: 17em;
-    padding: .2em .2em 0;
-    display: none;
+  width: 17em;
+  padding: 0.2em 0.2em 0;
+  display: none;
 }
 .ui-helper-clearfix {
-    min-height: 0;
+  min-height: 0;
+}
+
+/* form css */
+
+.login-form {
+  width: 340px;
+  margin: 50px auto;
+}
+.login-form form {
+  margin-bottom: 15px;
+  background: #f7f7f7;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  padding: 30px;
+}
+.login-form h2 {
+  margin: 0 0 15px;
+}
+.form-control,
+.btn {
+  min-height: 38px;
+  border-radius: 2px;
+}
+.btn {
+  font-size: 15px;
+  font-weight: bold;
 }
