navbar signup signin fixed

--- a/client/public/cycle.css
+++ b/client/public/cycle.css
@@ -32,9 +32,15 @@ body {
 .t-orange {
   color: var(--secondary_color) !important;
 }
+.t-blue {
+  color: var(--primary_color) !important;
+}
+.font-large {
+  font-size: 1.3rem;
+}
 p {
   font-weight: 400;
-  font-size: 1.3rem !important;
+  /* font-size: 1.3rem !important; */
   line-height: 1.625em;
   letter-spacing: 1px;
   color: #41444b;
@@ -43,29 +49,29 @@ p {
 }
 h1 {
   font-weight: 500;
-  font-size: 5.2rem;
+  /* font-size: 5.2rem; */
   color: #191a20;
   line-height: 60px;
 }
 h2 {
   font-weight: 500 !important;
-  font-size: 3.4rem !important;
+  /* font-size: 3.4rem !important; */
   line-height: 46px;
   color: #191a20;
 }
 h3 {
   font-weight: 500 !important;
-  font-size: 2.8rem;
+  /* font-size: 2.8rem; */
   color: #191a20;
 }
 h4 {
   font-weight: 500 !important;
-  font-size: 2.6rem;
+  /* font-size: 2.6rem; */
   color: #191a20;
   line-height: 46px;
 }
 h5 {
-  font-size: 2.2rem;
+  /* font-size: 2.2rem; */
   line-height: 24px;
   letter-spacing: 0.05em;
   color: #191a20;
@@ -74,7 +80,7 @@ h5 {
   color: #191a20;
 }
 h6 {
-  font-size: 2rem;
+  /* font-size: 2rem; */
   line-height: 24px;
   letter-spacing: 0.05em;
   text-align: justify;
@@ -97,6 +103,11 @@ h6 {
 }
 .w-300 {
   width: 30rem;
+}
+.banner-images {
+  width: 100vw;
+  height: 60vh;
+  object-fit: cover;
 }
 /* ======  title underline========== */
 .title-underline {
@@ -146,184 +157,11 @@ h6 {
   right: 0%;
 }
 /* ================  navbar css ======== */
-nav {
-  height: 6rem;
-  width: 100vw;
-  background-color: var(--primary_color);
-  box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
-  display: flex;
-  z-index: 10;
+.hovered {
+  transition: all 0.2s linear;
 }
-
-/*Styling Links*/
-.nav-links {
-  display: flex;
-  list-style: none;
-  width: 100vw;
-  padding: 0 0.7vw;
-  justify-content: space-between;
-  align-items: center;
-  text-transform: uppercase;
-}
-.nav-links li a {
-  text-decoration: none;
-}
-.main_link a:hover {
+.hovered:hover {
   color: var(--secondary_color) !important;
-}
-.nav-links li {
-  position: relative;
-}
-.nav-links li a::before {
-  content: "";
-  display: block;
-  height: 3px;
-  width: 0%;
-  position: absolute;
-  transition: all ease-in-out 250ms;
-  margin: 0 0 0 10%;
-}
-
-/*Styling Buttons*/
-.login-button {
-  background-color: transparent;
-  border: 1.5px solid #f2f5f7;
-  border-radius: 2em;
-  padding: 0.6rem 0.8rem;
-  margin-left: 2vw;
-  font-size: 1rem;
-  cursor: pointer;
-}
-.login-button:hover {
-  color: #131418;
-  background-color: #f2f5f7;
-  border: 1.5px solid #f2f5f7;
-  transition: all ease-in-out 350ms;
-}
-.join-button {
-  color: #131418;
-  background-color: #61dafb;
-  border: 1.5px solid #61dafb;
-  border-radius: 2em;
-  padding: 0.6rem 0.8rem;
-  font-size: 1rem;
-  cursor: pointer;
-}
-.join-button:hover {
-  color: #f2f5f7;
-  background-color: transparent;
-  border: 1.5px solid #f2f5f7;
-  transition: all ease-in-out 350ms;
-}
-
-/*Styling Hamburger Icon*/
-.hamburger div {
-  width: 30px;
-  height: 3px;
-  background: #f2f5f7;
-  margin: 5px;
-  transition: all 0.3s ease;
-}
-.hamburger {
-  display: none;
-}
-
-/*Stying for small screens*/
-@media screen and (max-width: 800px) {
-  nav {
-    /* position: fixed; */
-    z-index: 3;
-  }
-  .mobileview {
-    flex-direction: column;
-  }
-  .mobileview li {
-    margin-top: 2rem !important;
-  }
-  .hamburger {
-    display: block;
-    position: absolute;
-    cursor: pointer;
-    right: 10%;
-    top: 4%;
-
-    z-index: 9;
-    transition: all 0.7s ease;
-  }
-  .nav-links {
-    position: fixed;
-    background: var(--primary_color);
-    height: 100vh;
-    width: 100%;
-    flex-direction: column;
-    clip-path: circle(50px at 90% -20%);
-    -webkit-clip-path: circle(50px at 90% -10%);
-    transition: all 1s ease-out;
-    pointer-events: none;
-  }
-  .nav-links.open {
-    clip-path: circle(1000px at 90% -10%);
-    -webkit-clip-path: circle(1000px at 90% -10%);
-    pointer-events: all;
-    z-index: 8;
-  }
-  .nav-links li {
-    opacity: 0;
-  }
-
-  .nav-links li:nth-child(1) {
-    transition: all 0.5s ease 0.2s;
-    color: var(--secondary_color) !important;
-  }
-  .nav-links li:nth-child(2) {
-    transition: all 0.5s ease 0.4s;
-  }
-  .nav-links li:nth-child(3) {
-    transition: all 0.5s ease 0.6s;
-  }
-  .nav-links li:nth-child(4) {
-    transition: all 0.5s ease 0.7s;
-  }
-  .nav-links li:nth-child(5) {
-    transition: all 0.5s ease 0.8s;
-  }
-  .nav-links li:nth-child(6) {
-    transition: all 0.5s ease 0.9s;
-    margin: 0;
-  }
-  .nav-links li:nth-child(7) {
-    transition: all 0.5s ease 1s;
-    margin: 0;
-  }
-  li.fade {
-    opacity: 1 !important;
-  }
-  .mobile_view_text {
-    display: block !important;
-  }
-}
-
-.mobile_view_text {
-  display: none;
-}
-/*Animating Hamburger Icon on Click*/
-.toggle .line1 {
-  transform: rotate(-45deg) translate(-5px, 6px);
-}
-.toggle .line2 {
-  transition: all 0.7s ease;
-  width: 0;
-}
-.toggle .line3 {
-  transform: rotate(45deg) translate(-5px, -6px);
-}
-.nav_logo {
-  width: 70px;
-  text-align: center;
-}
-.main_link {
-  position: relative;
-  font-size: 2rem !important;
 }
 
 /* =================navbar end========= */
@@ -342,11 +180,11 @@ nav {
   overflow: hidden;
   width: 100%;
   max-width: 250px;
-  padding: 14px 0;
+  padding: 2px 0;
   text-transform: uppercase;
   z-index: 5;
   text-align: center;
-  font-size: 1.5rem !important;
+  font-size: 1.2rem !important;
   font-weight: bold;
   border: 3px solid #ffa800 !important;
   border-radius: 2px;
@@ -525,7 +363,6 @@ nav {
 }
 
 /* form css */
-
 .login-form {
   width: 340px;
   margin: 50px auto;
