--- a/client/public/cycle.css
+++ b/client/public/cycle.css
@@ -1,3 +1,38 @@
+/* table */
+table {
+    border-collapse: collapse;
+    border: 1px solid #f6f6f6;
+}
+table {
+    border-collapse: collapse;
+}
+table {
+    width: 100%;
+    margin-bottom: 1.313em;
+    border-spacing: 0;
+    background-color: rgba(0,0,0,0);
+}
+table tr:nth-child(1) {
+  background: #ddd;
+}
+table tr {
+  background: #f6f6f6;
+}
+table th, table td {
+  border: none;
+}
+table th, table td {
+  border-top: 1px solid #ddd;
+}
+table td {
+  line-height: 1.4;
+}
+table th, table td {
+  padding: 0.5em 0.625em;
+  line-height: 1.3;
+  text-align: left;
+  vertical-align: middle;
+}
 * {
   margin: 0;
   box-sizing: border-box;
@@ -171,6 +206,7 @@ h6 {
   -webkit-transition: background-color 0.2s;
   -o-transition: background-color 0.2s;
   transition: background-color 0.2s;
+  padding: 0px !important;
 }
 
 .cycle-btn {
@@ -179,8 +215,7 @@ h6 {
   display: block;
   overflow: hidden;
   width: 100%;
-  max-width: 250px;
-  padding: 2px 0;
+  width: 12rem;
   text-transform: uppercase;
   z-index: 5;
   text-align: center;
@@ -258,9 +293,8 @@ h6 {
 /* card */
 .card-front,
 .card-back {
+  height: 19rem;
   width: 100%;
-  height: 100%;
-  overflow: hidden;
   backface-visibility: hidden;
   transition: all 0.4s linear;
 }
@@ -361,7 +395,28 @@ h6 {
 .ui-helper-clearfix {
   min-height: 0;
 }
+/* ========== detail price ========*/
+.starting {
+  color: #272727;
+  background: var(--secondary_color);
+  padding: 5px 15px;
+  border-radius: 10px;
+  position: relative;
+}
+.starting:after {
+  content: '';
+  position: absolute;
+  top: -10px;
+  left: 50%;
+  margin-left: -10px;
+  width: 0;
+  height: 0;
+  border-bottom: solid 10px var(--secondary_color);
+  border-left: solid 10px transparent;
+  border-right: solid 10px transparent;
+}
 
+/* ==========end============ */
 /* form css */
 .login-form {
   width: 340px;
@@ -385,3 +440,17 @@ h6 {
   font-size: 15px;
   font-weight: bold;
 }
+
+/* ===== media queries ====== */
+@media only screen and (max-width: 600px){
+    .p-lr-50{
+      padding: .7rem ;
+    }
+    .pt-50 {
+        padding: .7rem ;
+    }
+    .card-front{
+      height: 23rem;
+    }
+}
+
