--- a/client/public/cycle.css
+++ b/client/public/cycle.css
@@ -1,16 +1,16 @@
 /* table */
 table {
-    border-collapse: collapse;
-    border: 1px solid #f6f6f6;
+  border-collapse: collapse;
+  border: 1px solid #f6f6f6;
 }
 table {
-    border-collapse: collapse;
+  border-collapse: collapse;
 }
 table {
-    width: 100%;
-    margin-bottom: 1.313em;
-    border-spacing: 0;
-    background-color: rgba(0,0,0,0);
+  width: 100%;
+  margin-bottom: 1.313em;
+  border-spacing: 0;
+  background-color: rgba(0, 0, 0, 0);
 }
 table tr:nth-child(1) {
   background: #ddd;
@@ -18,16 +18,19 @@ table tr:nth-child(1) {
 table tr {
   background: #f6f6f6;
 }
-table th, table td {
+table th,
+table td {
   border: none;
 }
-table th, table td {
+table th,
+table td {
   border-top: 1px solid #ddd;
 }
 table td {
   line-height: 1.4;
 }
-table th, table td {
+table th,
+table td {
   padding: 0.5em 0.625em;
   line-height: 1.3;
   text-align: left;
@@ -404,7 +407,7 @@ h6 {
   position: relative;
 }
 .starting:after {
-  content: '';
+  content: "";
   position: absolute;
   top: -10px;
   left: 50%;
@@ -440,17 +443,34 @@ h6 {
   font-size: 15px;
   font-weight: bold;
 }
-
-/* ===== media queries ====== */
-@media only screen and (max-width: 600px){
-    .p-lr-50{
-      padding: .7rem ;
-    }
-    .pt-50 {
-        padding: .7rem ;
-    }
-    .card-front{
-      height: 23rem;
-    }
+/* =====about us ======== */
+.about_container {
+  width: 100%;
+  height: 50vh;
+  background-color: rgb(245, 240, 240);
+  clip-path: polygon(
+    50% 0%,
+    100% 0,
+    100% 35%,
+    100% 100%,
+    80% 90%,
+    50% 100%,
+    20% 90%,
+    0 100%,
+    0% 35%,
+    0 0
+  );
 }
-
+/* ======= end ====== */
+/* ===== media queries ====== */
+@media only screen and (max-width: 600px) {
+  .p-lr-50 {
+    padding: 0.7rem;
+  }
+  .pt-50 {
+    padding: 0.7rem;
+  }
+  .card-front {
+    height: 23rem;
+  }
+}
